--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <ul class="link-list">
               <li><a href="https://twitch.tv/ThatMorganGuy" target="_blank" rel="noopener">Follow on Twitch</a></li>
               <li><a href="https://discord.gg/DuN3RvmY6m" target="_blank" rel="noopener">Join the Discord</a></li>
-              <li><a href="https://www.youtube.com/ThatMorganGuy01" target="_blank" rel="noopener">Subscribe on YouTube</a></li>
+              <li><a href="https://www.youtube.com/@ThatMorganGuy01" target="_blank" rel="noopener">Subscribe on YouTube</a></li>
               <li><a href="https://www.tiktok.com/" target="_blank" rel="noopener">Follow on TikTok</a></li>
             </ul>
           </div>
@@ -144,5 +144,6 @@
     <script src="./script.js"></script>
   </body>
   </html>
+
 
 
