--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <a href="#games">Games</a>
           <a href="./faq.html">FAQ</a>
           <a href="#about">About</a>
+          <a class="mumma-noma" href="./mumma-noma.html">Mumma_noma</a>
           <a class="cta" href="https://twitch.tv/ThatMorganGuy" target="_blank" rel="noopener">Follow on Twitch</a>
         </nav>
       </div>
