--- a/mumma-noma.html
+++ b/mumma-noma.html
@@ -13,7 +13,7 @@
 
     <link rel="preconnect" href="https://player.twitch.tv" />
     <link rel="preconnect" href="https://www.twitch.tv" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.css?v=2025-08-18-1" />
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'%3E%3Cpath fill='%23FFB6C1' d='M19 16h90v60L86 99H67l-14 13H38V99H19z'/%3E%3Cpath fill='%23fff' d='M39 32h50v40H73L59 86H49V72H39z'/%3E%3Crect width='10' height='22' x='50' y='40' fill='%23FFB6C1'/%3E%3Crect width='10' height='22' x='68' y='40' fill='%23FFB6C1'/%3E%3C/svg%3E" />
   </head>
   <body class="theme-mumma">
@@ -125,6 +125,6 @@
       </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./script.js?v=2025-08-18-1"></script>
   </body>
 </html>
